[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/speed.png" type="Texture" id=1]
[ext_resource path="res://str/addons/SpeedBoust.gd" type="Script" id=2]
[ext_resource path="res://str/addons/addonsfade_in.tres" type="Animation" id=3]
[ext_resource path="res://assets/253172__suntemple__retro-bonus-pickup-sfx.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 28.6573

[sub_resource type="Animation" id=2]
resource_name = "bouncing"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("speed:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.732043, 1.7411 ),
"update": 0,
"values": [ Vector2( -15.813, 0 ), Vector2( 15.8135, 0 ) ]
}

[node name="SpeedBoust" type="Area2D"]
collision_layer = 32
collision_mask = 17
script = ExtResource( 2 )

[node name="speed" type="Sprite" parent="."]
position = Vector2( -15.813, 0 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.00453, 1.55907 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "bouncing"
anims/bouncing = SubResource( 2 )
anims/fade_in = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="area_entered" from="." to="." method="_on_SpeedBoust_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_SpeedBoust_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
